syntax = "proto3";

option csharp_namespace = "GpioDevicesService";

import "google/protobuf/empty.proto";

package greet;

// The light control service definition.
service EnvironmentSensor {
  // Get current state
  rpc GetSensorData (google.protobuf.Empty) returns (SensorReply);
}

// The response message containing the brightness.
message SensorReply {
  double temperature = 1;
  double humindity = 2;
  string time = 3;
}
